# ROS2

./: Thrusttt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_robot_arm/lib/my_robot_arm/: move_arm_node
ros2_ws/install/my_robot_arm/share/my_robot_arm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
ros2_ws/install/my_robot_arm/share/my_robot_arm/launch/: move_arm_launch.py  moveit_rviz.launch.py
ros2_ws/install/my_robot_arm/share/my_robot_arm/urdf/: my_robot.urdf
ros2_ws/install/turtlebot_keyboard_control/lib/turtlebot_keyboard_control/: keyboard_control
ros2_ws/install/turtlebot_keyboard_control/share/turtlebot_keyboard_control/: package.sh  package.zsh
ros2_ws/install/turtlebot_sine_trajectory/lib/turtlebot_sine_trajectory/: sine_trajectory
ros2_ws/install/turtlebot_sine_trajectory/share/turtlebot_sine_trajectory/: package.sh  package.zsh
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/my_robot_arm/share/my_robot_arm/: package.sh  package.zsh
ros2_ws/src/install/turtlebot_sine_trajectory/share/turtlebot_sine_trajectory/: package.sh
ros2_ws/src/my_robot_arm/: CMakeLists.txt  moveit_control.py  setup.py
ros2_ws/src/my_robot_arm/config/: moveit_config.yaml  moveit_params.yaml  ompl_planning.yaml  robot_description.yaml  sensors.yaml
ros2_ws/src/my_robot_arm/launch/: moveit_gazebo.launch.py  robot_state_publisher.launch.py
ros2_ws/src/my_robot_arm/src/: move_arm_node.cpp
ros2_ws/src/my_robot_arm/srdf/: my_robot.srdf
ros2_ws/src/turtlebot_keyboard_control/: setup.cfg  setup.py
ros2_ws/src/turtlebot_keyboard_control/turtlebot_keyboard_control/: keyboard_control.py
ros2_ws/src/turtlebot_sine_trajectory/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot_sine_trajectory/install/: local_setup.sh  setup.sh
ros2_ws/src/turtlebot_sine_trajectory/turtlebot_sine_trajectory/scripts/: sine_trajectory.py
(+10 files in other folders)
